--- a/templates/estimate.html
+++ b/templates/estimate.html
@@ -18,12 +18,12 @@
                     <input type="text" id="height" name="height" required>
                 </label>
             <br><br>
-                <input type="submit" value="Add">
+                <input type="submit" value="Calculate">
     
 
     </form>
     {% if estimate %}
-         <p> The sum of the two numbers is: {{ estimate }}</p>
+         <p> The total estimate came out to: {{ estimate }}</p>
     {% endif %}
 
 
