--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 		<p>
 			Welcome to Tanks Inc. we provide the highest quality vertical tanks here in the midwest(Iowa, Illinois, Indiana, Nebraska, Wisconsin). We have the most competitive prices in the midwest for the quality we provide. Click the estimate link to get a free estimate!
 		</p>
-		<img src="Images/tank.jpeg">
+		<img src="https://nexxis.com/wp-content/uploads/sites/3/2019/09/Aboveground-storage-tanks.png" >
 	</main>
   </body>
   <footer>
